Some more automated refactorings