@@ -9,20 +9,20 @@ import com.amazonaws.services.s3.model.S3Object;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.URL;
 import java.net.URLConnection;
+import java.nio.charset.StandardCharsets;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
  * Rough implementation of an S3 URL class handler.
- *
+ * <p>
  * When registered, ImageJ's Opener will be able to retrieve "s3://" URLs.
  * ProfileCredentialsProvider is used if no alternate is provided.  This should handle most uses.
- *
- * Based on AWS S3 SDK sample code: http://docs.aws.amazon.com/AmazonS3/latest/dev/RetrievingObjectUsingJava.html
+ * <p>
+ * Based on AWS S3 SDK sample code: <a href="http://docs.aws.amazon.com/AmazonS3/latest/dev/RetrievingObjectUsingJava.html">...</a>
  */
 public class S3URLConnection extends URLConnection {
 
@@ -49,7 +49,7 @@ public class S3URLConnection extends URLConnection {
             connect();
             contentType = s3object.getObjectMetadata().getContentType();
         } catch (final Throwable t) {
-            LOG.warn("failed to retrieve content type for " + getURL(), t);
+            LOG.warn("failed to retrieve content type for {}", getURL(), t);
         }
         return contentType;
     }
@@ -62,14 +62,8 @@ public class S3URLConnection extends URLConnection {
     private synchronized void connectToS3() throws IOException {
         if (! connected) {
             try {
-                String s3key;
-                try {
-                    s3key = java.net.URLDecoder.decode(s3uri.getKey(), "UTF-8");
-                } catch (final UnsupportedEncodingException e) {
-                    LOG.warn("failed to decode key, using raw key instead", e);
-                    // TODO: Better error handling with badly encoded URLs?
-                    s3key = s3uri.getKey();
-                }
+                final String s3key;
+                s3key = java.net.URLDecoder.decode(s3uri.getKey(), StandardCharsets.UTF_8);
                 s3object = s3Client.getObject(new GetObjectRequest(s3uri.getBucket(), s3key));
                 connected = true;
             } catch (final AmazonServiceException ase) {
